Correct type for create() method of Metadata and DataManager #2108